# ndimpute_dev

./: README.md  background_research.md  implementation_plan.md  pyproject.toml  validation_plan.md
src/ndimpute/: _interval.py  _parametric.py  _ros_left.py  _ros_mixed.py  _ros_right.py  _substitution.py  _turnbull.py  api.py
tests/: test_mixed.py  test_right_imputation.py  test_ros_left.py  test_substitution.py
validation/: audit_summary.md  generate_r_benchmarks.R  validate_against_r.py  validation_template.md
validation/01_textbook_tce/: generate_data.R  truth.csv  validate.py  validation_report.md
validation/02_synthetic_lognormal/: validate_mc.py  validation_report.md
validation/03_reliability_weibull/: validate_parametric.py  validation_report.md
validation/04_mixed_stress/: validate_mixed.py  validation_report.md
validation/05_edge_cases/: validate_edges.py  validation_report.md
validation/06_comparative_right/: validate_compare.py  validation_report.md
validation/07_multiple_limits_sulfate/: validate_multilimit.py  validation_report.md
validation/08_comprehensive_r_comparison/: analyze_results.py  benchmark_lognormal_n200_cens0.2_multiple.csv  benchmark_lognormal_n200_cens0.2_single.csv  benchmark_lognormal_n200_cens0.5_multiple.csv  benchmark_lognormal_n200_cens0.5_single.csv  benchmark_lognormal_n200_cens0.8_multiple.csv  benchmark_lognormal_n200_cens0.8_single.csv  benchmark_lognormal_n20_cens0.2_multiple.csv  benchmark_lognormal_n20_cens0.2_single.csv  benchmark_lognormal_n20_cens0.5_multiple.csv  benchmark_lognormal_n20_cens0.5_single.csv  (+33 more)
(+2 files in other folders)
