[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ndimpute"
version = "0.1.0"
description = "A package for imputing arbitrarily censored data"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.13.0"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
